--- a/src/commands/generate/templates/js/component/Counter.ejs
+++ b/src/commands/generate/templates/js/component/Counter.ejs
@@ -8,13 +8,13 @@
     import React from 'react';
 <% } %>
 <% if (withPropTypes) { %>
-    import simpleReducer from '../../reducers/simpleReducer';
+    import simpleReducer from './path/to/your/reducer';
 <% } %>
 <% if (withPropTypes) { %>
     import PropTypes from 'prop-types';
 <% } %>
 <% if (withStyledComponents) { %>
-    import './Counter.js';
+    import StyledButton from './StyledButton.js';
 <% } %>
 
 
