--- a/src/commands/generate/templates/js/component/Counter.ejs
+++ b/src/commands/generate/templates/js/component/Counter.ejs
@@ -7,7 +7,7 @@
 <% } else{ %>
     import React from 'react';
 <% } %>
-<% if (withPropTypes) { %>
+<% if (withRedux) { %>
     import simpleReducer from './path/to/your/reducer';
 <% } %>
 <% if (withPropTypes) { %>
