--- a/src/commands/generate/templates/js/component/Counter.test.ejs
+++ b/src/commands/generate/templates/js/component/Counter.test.ejs
@@ -1,6 +1,6 @@
 import React from 'react';
 import ReactDOM from 'react-dom';
-import Counter from './<%= component %>';
+import <%= component %> from './<%= component %>';
 
 it('renders without crashing', () => {
     const div = document.createElement('div');
