--- a/src/commands/generate/templates/ts/component/{Component}.ejs
+++ b/src/commands/generate/templates/ts/component/{Component}.ejs
@@ -7,18 +7,16 @@
 <% } else{ %>
     import React from 'react';
 <% } %>
-<% if (withPropTypes) { %>
-    import simpleReducer from '../../reducers/simpleReducer';
-<% } %>
-<% if (withPropTypes) { %>
-    import PropTypes from 'prop-types';
+<% if (withRedux) { %>
+    import simpleReducer from './path/to/your/reducer';
 <% } %>
 <% if (withStyledComponents) { %>
-    import './Counter.js';
+    import StyledComponent from './Styled<%= component %>.js';
 <% } %>
-
-
-function Counter({className = ''}) {
+interface <%= component %>Props {
+    children: JSX.Element[] | JSX.Element
+}
+const <%= component %>: React.SFC<<%= component %>Props> = ({children}) => {
 <% if (withHooks) { %>
     const [count, setCount] = useState(0);
 <% } %>
@@ -33,21 +31,25 @@ function Counter({className = ''}) {
 <% } %>
 
 return (
-<div className={className}>
+<% if(withStyledComponents){ %>
+    <StyledComponent>
+<% } else{ %>
+    <div>
+<% } %>
     <% if(withHooks){ %>
         <% if(withRedux){ %>
             <p>You clicked {count} times</p>
-            <StyledButton onClick={() => setCount(count + 1)} primary>
+            <button onClick={() => setCount(count + 1)} primary>
             Click me
-            </StyledButton>
+            </button>
             <pre>
                     {result}
                 </pre>
         <% } else if (withHooks){ %>
             <p>You clicked {count} times</p>
-            <StyledButton onClick={() => setCount(count + 1)} primary>
+            <button onClick={() => setCount(count + 1)} primary>
             Click me
-            </StyledButton>
+            </button>
             <pre>
                 {count}
             </pre>
@@ -55,15 +57,16 @@ return (
             <%= component %>
         <% } %>
     <% } else{ %>
-        import React from 'react';
+        <div>
+            <%= component %>
+        </div>
     <% } %>
-</div>
+<% if(withStyledComponents){ %>
+    </StyledComponent>
+<% } else{ %>
+    </div>
+<% } %>
 );
 }
-<% if (withHooks) { %>
-    Counter.propTypes = {
-    className: PropTypes.string
-    };
-<% } %>
 
-export default React.memo(Counter);
+export default React.memo(<%= component %>);
