--- a/src/commands/generate/templates/js/container/{Component}.ejs
+++ b/src/commands/generate/templates/js/container/{Component}.ejs
@@ -7,7 +7,7 @@ import { count } from './actions/actions.js';
 <% if (withStyledComponents) { %>
     import Styled<%= component %> from './Styled<%= component %>.js';
 <% } %>
-import './<%= componoent %>.styles.css';
+import './<%= component %>.styles.css';
 
 class <%= component %>Container extends Component {
     onClick = () => {
