--- a/src/commands/generate/templates/js/component/Styled{Component}.ejs
+++ b/src/commands/generate/templates/js/component/Styled{Component}.ejs
@@ -1,6 +1,6 @@
 import styled, {css} from "styled-components";
 
-export default styled.a`
+export default styled.div`
   color: red;
   ${props => props.purple && css`
     color: purple;
