Add template command

--- a/src/commands/generate/templates/ts/component/{Component}.test.ts.ejs
+++ b/src/commands/generate/templates/ts/component/{Component}.test.ts.ejs
@@ -4,6 +4,6 @@ import <%= component %> from './<%= component %>';
 
 it('renders without crashing', () => {
     const div = document.createElement('div');
-    ReactDOM.render(<<%= Component %> />, div);
+    ReactDOM.render(<<%= component %> />, div);
     ReactDOM.unmountComponentAtNode(div);
 });
