--- a/src/commands/generate/templates/ts/container/{Component}.test.ts.ejs
+++ b/src/commands/generate/templates/ts/container/{Component}.test.ts.ejs
@@ -7,6 +7,6 @@ it('renders without crashing', () => {
     const mockStore = configureStore();
     const store = mockStore({count: {}});
     const div = document.createElement('div');
-    ReactDOM.render(<<%= Component %> store={store} />, div);
+    ReactDOM.render(<<%= component %> store={store} />, div);
     ReactDOM.unmountComponentAtNode(div);
 });
