--- a/test/feature/templates/component/{Component}.jsx.ejs
+++ b/test/feature/templates/component/{Component}.jsx.ejs
@@ -3,7 +3,7 @@ import './<%= component %>.styles.css';
 
 function <%= component %>({children}) {
     return (
-        <div className="<%= component %>>{<%= component %>}</div>"
+        <div className="<%= component %>">{<%= component %>}</div>
     );
 }
 
