--- a/src/commands/generate/templates/ts/component/{Component}.tsx.ejs
+++ b/src/commands/generate/templates/ts/component/{Component}.tsx.ejs
@@ -30,7 +30,7 @@ return (
 <% } %>
 <% if(withHooks){ %>
         <p>You clicked {count} times</p>
-        <button onClick={() => setCount(count + 1)} primary>
+        <button onClick={() => setCount(count + 1)}>
         Click me
         </button>
         <pre>
